fix: Align text center

--- a/src/modals/Participate.scss
+++ b/src/modals/Participate.scss
@@ -147,6 +147,7 @@
          > p {
             font-size: 1rem;
             color: rgba(var(--text-color-rgb), 0.5);
+            text-align: center;
          }
       }
 
